--- a/ExpensesControlApp/Views/ExpenseEntry/Index.cshtml
+++ b/ExpensesControlApp/Views/ExpenseEntry/Index.cshtml
@@ -31,7 +31,7 @@
         </div>
 
         <div class="col-6 text-end">
-            <a class="btn btn-outline-dark" asp-controller="Expense" asp-action="Create">Add new Expense</a>
+            <a class="btn btn-outline-dark" asp-action="Create">Add new Expense</a>
         </div>
     </div>
     <br />
@@ -59,8 +59,8 @@
                 {
 
                     <tr>
-                        <td class="col-3">@entry.Expense.ExpenseName</td>
-                        <td class="col-3">@entry.Expense.Amount</td>
+                        <td class="col-3">@entry.ExpenseName</td>
+                        <td class="col-3">@entry.Amount</td>
                         <td class="col-3">@entry.Date.ToShortDateString()</td>
                         <td class="col-3">
                             <div class="w-100 btn-group" role="group">
@@ -100,13 +100,13 @@
                     <p class="text-end px-2">Total:</p>
                 </div>
                 <div class="col-3">
-                    <p id="total" class="px-2">@Model.ExpenseEntries.Sum(x => x.Expense.Amount)</p>
+                    <p id="total" class="px-2">@Model.ExpenseEntries.Sum(x => x.Amount)</p>
                 </div>
                 <div class="avail-container col-3">
                     <p class="text-end px-2 fw-bold">Available:</p>
                 </div>
                 <div class="avail-container col-3">
-                    <p id="available" class="px-2 fw-bold">@Model.ExpenseEntries.Sum(x => x.Expense.Amount)</p>
+                    <p id="available" class="px-2 fw-bold">@Model.ExpenseEntries.Sum(x => x.Amount)</p>
                     
                 </div>
             </div>
