--- a/ExpensesControlApp/Views/Shared/_Layout.cshtml
+++ b/ExpensesControlApp/Views/Shared/_Layout.cshtml
@@ -22,10 +22,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Expense" asp-action="Index">Manage Expenses</a>
                         </li>
                         <li class="nav-item px-2">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Expense" asp-action="Index">Manage Templates</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="RegularExpense" asp-action="Index">Manage Regular Expenses</a>
                         </li>
                         <li class="nav-item px-2">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="LimitParam" asp-action="Index">Manage Limit</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="LimitParam" asp-action="Index">Manage Expense Limit</a>
                         </li>
                     </ul>
                     <div class="nav-item px-2 ml-auto mr-o" style="margin-left: auto; margin-right: 0;">
