Deleted Expense Controller. Set up RegularExpense Controller

--- a/ExpensesControlApp/Views/RegularExpense/Create.cshtml
+++ b/ExpensesControlApp/Views/RegularExpense/Create.cshtml
@@ -34,9 +34,9 @@
                                 <span class="input-group-text" id="addon-timespan">Time Span</span>
                             </div>
                             <input id="timespan-input" asp-for="TimeSpan" class="form-control" aria-describedby="addon-timespan" hidden>
-                            <input type="radio" name="timespan" class="@(Model.TimeSpan == TimeOption.Weekly? "checked" : "") btn-check" value="0" id="time-option1" autocomplete="off">
+                            <input type="radio" name="timespan" class="btn-check" value="0" id="time-option1" autocomplete="off">
                             <label class="btn btn-outline-secondary" for="time-option1">@TimeOption.Weekly</label>
-                            <input type="radio" name="timespan" class="@(Model.TimeSpan == TimeOption.Monthly? "checked" : "") btn-check" value="1" id="time-option2" autocomplete="off">
+                            <input type="radio" name="timespan" class="btn-check" value="1" id="time-option2" autocomplete="off">
                             <label class="btn btn-outline-secondary" for="time-option2">@TimeOption.Monthly</label>
                         </div>
                     </div>
@@ -59,9 +59,6 @@
     <script>
        $('input[name="timespan"]').click(function(){
             $("#timespan-input").val($('input[name="timespan"]:checked').val());
-        });
-        $(document).ready(function(){
-            $(".checked").prop("checked", true);
         });
     </script>
 }
