--- a/ExpensesControlApp/Views/RegularExpense/Index.cshtml
+++ b/ExpensesControlApp/Views/RegularExpense/Index.cshtml
@@ -48,7 +48,7 @@
                     <tr>
                         <td class="col-3">@regExpense.ExpenseName</td>
                         <td class="col-3">@regExpense.Amount</td>
-                        <td class="col-3">@(regExpense.TimeSpan)</td>
+                        <td class="col-3">@regExpense.TimeSpan</td>
                         <td class="col-3">
                             <div class="w-100 btn-group" role="group">
                                 <a class="btn btn-outline-success mx-1" asp-route-regExpenseId="@regExpense.RegularExpenseId" asp-action="Update">
