--- a/ExpensesControlApp/Views/Shared/_Layout.cshtml
+++ b/ExpensesControlApp/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                 <div class="d-flex flex-row justify-content-around w-100 px-5" >
                     <ul class="navbar-nav">
                         <li class="nav-item px-2">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Expense" asp-action="Index">Manage Expenses</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ExpenseEntry" asp-action="Index">Manage Expenses</a>
                         </li>
                         <li class="nav-item px-2">
                             <a class="nav-link text-dark" asp-area="" asp-controller="RegularExpense" asp-action="Index">Manage Regular Expenses</a>
