--- a/ExpensesControlApp/Views/Home/Index.cshtml
+++ b/ExpensesControlApp/Views/Home/Index.cshtml
@@ -5,5 +5,5 @@
 
 <div style="height: 500px;" class="text-center d-flex flex-column justify-content-center align-items-center">
     <h1 class="display-4">My Expense Controller</h1>
-    <a class="btn btn-outline-dark w-25 my-5" asp-controller="ExpenseEntry" asp-action="index">Start</a>
+    <a class="btn btn-outline-dark w-25 my-5" asp-controller="ExpenseManager" asp-action="index">Start</a>
 </div>
