--- a/ExpensesControlApp/Views/LimitParam/Index.cshtml
+++ b/ExpensesControlApp/Views/LimitParam/Index.cshtml
@@ -44,7 +44,7 @@
                             <input id="submit" type="submit" class="btn btn-outline-success w-50" value="Save" />
                         </div>
                         <div class="col">
-                            <a class="btn btn-outline-danger w-50" asp-controller="ExpenseEntry" asp-action="Index">Go Back</a>
+                            <a class="btn btn-outline-danger w-50" asp-controller="ExpenseManager" asp-action="Index">Go Back</a>
                         </div>
                     </div>
                 </div>
