--- a/ExpensesControlApp/Views/RegularExpense/Index.cshtml
+++ b/ExpensesControlApp/Views/RegularExpense/Index.cshtml
@@ -47,7 +47,7 @@
 
                     <tr>
                         <td class="col-3">@regExpense.ExpenseName</td>
-                        <td class="col-3">@regExpense.Amount</td>
+                        <td class="col-3">@regExpense.Amount.ToString("N")</td>
                         <td class="col-3">@regExpense.TimeSpan</td>
                         <td class="col-3">
                             <div class="w-100 btn-group" role="group">
