--- a/ExpensesControlApp/Views/RegularExpense/Update.cshtml
+++ b/ExpensesControlApp/Views/RegularExpense/Update.cshtml
@@ -33,7 +33,7 @@
                     </div>
                     <div class="col-5">
                         <div class="input-group">
-                            <div class="input-group-prepend">
+                            <div class="col-3 input-group-prepend">
                                 <span class="input-group-text" id="addon-timespan">Time Span</span>
                             </div>
                             <input id="timespan-input" asp-for="TimeSpan" class="form-control" aria-describedby="addon-timespan" hidden>
