--- a/ExpensesControlApp/Views/ExpenseManager/Update.cshtml
+++ b/ExpensesControlApp/Views/ExpenseManager/Update.cshtml
@@ -34,7 +34,7 @@
                     </div>
                     <div class="col-5">
                         <div class="input-group">
-                            <div class="input-group-prepend">
+                            <div class="col-3 input-group-prepend">
                                 <span class="input-group-text" id="addon-date">Date</span>
                             </div>
                             <input id="datepicker" class="form-control" aria-describedby="addon-date">
