--- a/ExpensesControlApp/Views/ExpenseManager/Create.cshtml
+++ b/ExpensesControlApp/Views/ExpenseManager/Create.cshtml
@@ -10,33 +10,8 @@
             <h2 class="text-black-50 pl-3">Add Expense</h2>
         </div>
         <div class="d-flex flex-column align-items-center">
-                    @*@(Html.EditorFor(m => m.Expense))*@
-                    <div class="col-5">
-                        <div class="input-group">
-                            <div class="col-3 input-group-prepend">
-                                <span class="input-group-text" id="addon-name">Expense Name</span>
-                            </div>
-                            <input asp-for="ExpenseName" class="form-control" aria-describedby="addon-name">
-                        </div>
-                    </div>
-                    <div class="col-5">
-                        <div class="input-group">
-                            <div class="col-3 input-group-prepend">
-                                <span class="input-group-text" id="addon-amount">Amount</span>
-                            </div>
-                            <input asp-for="Amount" class="form-control" aria-describedby="addon-amount">
-                        </div>
-                    </div>
-                    <div class="col-5">
-                        <div class="input-group">
-                            <div class="col-3 input-group-prepend">
-                                <span class="input-group-text" id="addon-date">Date</span>
-                            </div>
-                            <input id="datepicker" class="form-control" aria-describedby="addon-date">
-                            <input id="dateinput" asp-for="Date" class="form-control" aria-describedby="addon-date" hidden>
-                            <span asp-validation-for="Date" class="text-danger"></span>
-                        </div>
-                    </div>
+                    <partial name="_ExpenseInput" for=Expense />
+                    <partial name="_DateInput" for=@Model/>
                 </div>
                 <div class="row my-4">
                     <div class="col-4 offset-4 row text-center">
@@ -66,4 +41,5 @@
         });
     </script>
 }
+
 
