--- a/ExpensesControlApp/Views/RegularExpense/Create.cshtml
+++ b/ExpensesControlApp/Views/RegularExpense/Create.cshtml
@@ -11,55 +11,26 @@
             <h2 class="text-black-50 pl-3">Add Regular Expense</h2>
         </div>
         <div class="d-flex flex-column align-items-center">
-                    @*@(Html.EditorFor(m => m.Expense))*@
-                    <div class="col-5">
-                        <div class="input-group">
-                            <div class="col-3 input-group-prepend">
-                                <span class="input-group-text" id="addon-name">Expense Name</span>
-                            </div>
-                            <input asp-for="ExpenseName" class="form-control" aria-describedby="addon-name">
-                        </div>
-                    </div>
-                    <div class="col-5">
-                        <div class="input-group">
-                            <div class="col-3 input-group-prepend">
-                                <span class="input-group-text" id="addon-amount">Amount</span>
-                            </div>
-                            <input asp-for="Amount" class="form-control" aria-describedby="addon-amount">
-                        </div>
-                    </div>
-                    <div class="col-5">
-                        <div class="input-group">
-                            <div class="col-3 input-group-prepend">
-                                <span class="input-group-text" id="addon-timespan">Time Span</span>
-                            </div>
-                            <input id="timespan-input" asp-for="TimeSpan" class="form-control" aria-describedby="addon-timespan" hidden>
-                            <input type="radio" name="timespan" class="btn-check" value="0" id="time-option1" autocomplete="off">
-                            <label class="btn btn-outline-secondary" for="time-option1">@TimeOption.Weekly</label>
-                            <input type="radio" name="timespan" class="btn-check" value="1" id="time-option2" autocomplete="off">
-                            <label class="btn btn-outline-secondary" for="time-option2">@TimeOption.Monthly</label>
-                        </div>
-                    </div>
+            <partial name="_ExpenseInput" for=Expense />
+            <partial name="_TimeSpanInput" for=TimeSpan />
+        </div>
+        <div class="row my-4">
+            <div class="col-4 offset-4 row text-center">
+                <div class="col">
+                    <input id="submit-create" type="submit" class="btn btn-outline-success w-50" asp-action="Create" value="Create" />
                 </div>
-                <div class="row my-4">
-                    <div class="col-4 offset-4 row text-center">
-                        <div class="col">
-                            <input id="submit-create" type="submit" class="btn btn-outline-success w-50"  asp-action="Create" value="Create"/>
-                        </div>
-                        <div class="col">
-                            <a class="btn btn-outline-danger w-50" asp-action="Index">Cancel</a>
-                        </div>
-                    </div>
+                <div class="col">
+                    <a class="btn btn-outline-danger w-50" asp-action="Index">Cancel</a>
                 </div>
-           
-        
+            </div>
+        </div>
     </div>
 </form>
 @section MyScripts {
-    <script>
-       $('input[name="timespan"]').click(function(){
-            $("#timespan-input").val($('input[name="timespan"]:checked').val());
-        });
-    </script>
+<script>
+    $('input[name="timespan"]').click(function(){
+         $("#timespan-input").val($('input[name="timespan"]:checked').val());
+     });
+</script>
 }
 
