--- a/ExpensesControlApp/Views/LimitParam/Index.cshtml
+++ b/ExpensesControlApp/Views/LimitParam/Index.cshtml
@@ -10,46 +10,41 @@
         <div class="row">
             <h2 class="text-black-50 pl-3">Set Limit</h2>
         </div>
-        <div class="row">
-            <div class="col-12">
-
-                <div class="d-flex flex-row justify-content-center my-5">
-                    <div class="col-3 mx-5">
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text" id="addon-amount">Amount</span>
-                            </div>
-                            <input asp-for="Amount" class="form-control" aria-describedby="addon-amount">
-                            <span asp-validation-for="Amount" class="text-danger"></span>
-                        </div>
+        <div class="d-flex flex-column align-items-center">
+            <div class="col-5">
+                <div class="input-group">
+                    <div class="col-3 input-group-prepend">
+                        <span class="input-group-text" id="addon-amount">Amount</span>
                     </div>
-                    <partial name="_TimeSpanInput" for=TimeSpan />
+                    <input asp-for="Amount" class="form-control" aria-describedby="addon-amount">
+                    <span asp-validation-for="Amount" class="text-danger"></span>
                 </div>
-
-                <div class="row my-4">
-                    <div class="col-4 offset-4 row text-center">
-                        <div class="col">
-                            <input id="submit" type="submit" class="btn btn-outline-success w-50" value="Save" />
-                        </div>
-                        <div class="col">
-                            <a class="btn btn-outline-danger w-50" asp-controller="ExpenseManager" asp-action="Index">Go Back</a>
-                        </div>
-                    </div>
+            </div>
+            <partial name="_TimeSpanInput" for=TimeSpan />
+        </div>
+        <div class="row my-4">
+            <div class="col-4 offset-4 row text-center">
+                <div class="col">
+                    <input id="submit" type="submit" class="btn btn-outline-success w-50" value="Save" />
+                </div>
+                <div class="col">
+                    <a class="btn btn-outline-danger w-50" asp-controller="ExpenseManager" asp-action="Index">Cancel</a>
                 </div>
             </div>
         </div>
+
     </div>
 </form>
 @section MyScripts {
-    <script>
-        
-        $('input[name="timespan"]').click(function(){
-            $("#timespan-input").val($('input[name="timespan"]:checked').val());
-        });
-        $(document).ready(function(){
-            $(".checked").prop("checked", true);
-        });
-    </script>
-    
+<script>
+
+    $('input[name="timespan"]').click(function(){
+        $("#timespan-input").val($('input[name="timespan"]:checked').val());
+    });
+    $(document).ready(function(){
+        $(".checked").prop("checked", true);
+    });
+</script>
+
 }
 
